# hermes-agent-plugin

./: .gitignore  PR_21_REVIEW.md  README.md  __init__.py  a2a_context.py  adapter.py  after-install.md  cli.py  config.py  diagnostics.py  doctor.py  hemres-plugin-port-plan.md  http_routes.py  inkbox_lineage.py  plugin.yaml  pyproject.toml  realtime.py  realtime_supervisor.py  reply_guard.py  setup_wizard.py  tools.py  turn_context.py  webhook_providers.py
.github/: canary-failure.md
docs/: realtime-supervisor.md
scripts/: send_external_event.py
tests/: conftest.py  proof_harness.py  test_a2a.py  test_adapter_dedup.py  test_agent_identity_marker.py  test_call_lifecycle.py  test_channel_overrides.py  test_ci_import_isolation.py  test_config_tools.py  test_contact_tools.py  test_delivery_failure_retry.py  test_diagnostics.py  test_email_self_guard.py  test_external_events.py  test_external_reply.py  test_http_routes.py  test_imessage.py  test_lineage_store.py  test_place_call_origination.py  test_realtime_auth.py  test_realtime_bridge_parity.py  test_realtime_capabilities.py  test_realtime_contact_tools.py  test_realtime_hosted.py  test_realtime_supervisor.py  test_realtime_supervisor_hermes.py  test_registration.py  test_relay_answer.py  test_reply_guard.py  test_setup_wizard.py  test_sms_conversations.py  test_spinoff_bind.py  test_spinoff_query.py  test_spinoff_spawn.py  test_supervisor_hermes_proof.py  test_supervisor_proof.py  test_tunnel_logging.py  test_voice_progress_suppression.py  test_webhook_context.py  test_webhook_providers.py
tests/live/: README.md  (+12 more)
(+29 files in other folders)
